--- a/WolvenKit/Views/Editor/Documents/DocumentView.xaml
+++ b/WolvenKit/Views/Editor/Documents/DocumentView.xaml
@@ -138,7 +138,11 @@
          HorizontalAlignment="Stretch" />
 
         <Grid Grid.Column="2">
-            <hc:PropertyGrid PropertyResolver="{DynamicResource MyPropertyResolver}" SelectedObject="{Binding SelectedChunk.Data}" />
+            <hc:PropertyGrid
+                PropertyResolver="{DynamicResource MyPropertyResolver}"
+                SelectedObject="{Binding SelectedChunk.Data}"
+                
+                />
         </Grid>
     </Grid>
 </catel:UserControl>
