--- a/WolvenKit/Views/Shared/RecentlyUsedItemsView.xaml
+++ b/WolvenKit/Views/Shared/RecentlyUsedItemsView.xaml
@@ -13,7 +13,8 @@
  d:DesignHeight="300"
  d:DesignWidth="300"
  IsVisibleChanged="UserControl_IsVisibleChanged"
- mc:Ignorable="d">
+ mc:Ignorable="d"
+ >
 
     <Grid x:Name="topGrid">
         <Grid.RowDefinitions>
@@ -23,23 +24,29 @@
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
-        <orchestra:RibbonBackstageTabItemHeader
-         Grid.Row="0"
-         Height="60"
-         Foreground="Gray"
-         HeaderText="Recent documents" />
 
+
+        <TextBlock
+         Height="50"
+         Margin="15,10,5,5"
+         HorizontalAlignment="Left"
+         Style="{StaticResource TextBlockLargeBold}"
+         Text="Recent Projects"
+         />
+    
         <ItemsControl
          Grid.Row="1"
          ItemsSource="{Binding PinnedItems}"
-         Visibility="{Binding PinnedItems, Converter={catel:CollectionToCollapsingVisibilityConverter}}">
+         Visibility="{Binding PinnedItems, Converter={catel:CollectionToCollapsingVisibilityConverter}}"
+         >
             <ItemsControl.ItemTemplate>
                 <DataTemplate>
                     <orchestra:RibbonBackstageButton
                      Command="{catel:CommandManagerBinding File.Open}"
                      CommandParameter="{Binding Name}"
                      ShowBorder="False"
-                     ToolTip="{Binding Name}">
+                     ToolTip="{Binding Name}"
+                     >
                         <Grid>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="Auto" />
@@ -55,20 +62,23 @@
                              Command="{Binding ElementName=topGrid, Path=DataContext.UnpinItem}"
                              CommandParameter="{Binding Name}"
                              Foreground="{DynamicResource MahApps.Brushes.AccentBase}"
-                             ShowBorder="False">
+                             ShowBorder="False"
+                             >
                                 <iconPacks:PackIconCodicons
                                  Width="20"
                                  Height="20"
                                  Margin="0,0,0,0"
                                  VerticalAlignment="Center"
-                                 Kind="Pinned" />
+                                 Kind="Pinned"
+                                 />
                             </orchestra:RibbonBackstageButton>
 
                             <TextBlock
                              Grid.Column="1"
                              Margin="5"
                              Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}"
-                             Text="{Binding Name, Converter={orchestra:PathToStringConverter}, ConverterParameter=100}" />
+                             Text="{Binding Name, Converter={orchestra:PathToStringConverter}, ConverterParameter=100}"
+                             />
 
                             <orchestra:RibbonBackstageButton
                              Grid.Column="2"
@@ -77,13 +87,15 @@
                              Command="{Binding ElementName=topGrid, Path=DataContext.OpenInExplorer}"
                              CommandParameter="{Binding Name}"
                              ShowBorder="False"
-                             ToolTip="Open in explorer">
+                             ToolTip="Open in explorer"
+                             >
                                 <iconPacks:PackIconCodicons
                                  Width="20"
                                  Height="20"
                                  Margin="0,0,0,0"
                                  VerticalAlignment="Center"
-                                 Kind="FolderOpened" />
+                                 Kind="FolderOpened"
+                                 />
                             </orchestra:RibbonBackstageButton>
                         </Grid>
                     </orchestra:RibbonBackstageButton>
@@ -94,19 +106,22 @@
         <Border
          Grid.Row="2"
          Height="1"
-         Visibility="{Binding PinnedItems, Converter={catel:CollectionToCollapsingVisibilityConverter}}" />
+         Visibility="{Binding PinnedItems, Converter={catel:CollectionToCollapsingVisibilityConverter}}"
+         />
 
         <ItemsControl
          Grid.Row="3"
          ItemsSource="{Binding RecentlyUsedItems}"
-         Visibility="{Binding RecentlyUsedItems, Converter={catel:CollectionToCollapsingVisibilityConverter}}">
+         Visibility="{Binding RecentlyUsedItems, Converter={catel:CollectionToCollapsingVisibilityConverter}}"
+         >
             <ItemsControl.ItemTemplate>
                 <DataTemplate>
                     <orchestra:RibbonBackstageButton
                      Command="{catel:CommandManagerBinding Application.OpenProject}"
                      CommandParameter="{Binding Name}"
                      ShowBorder="False"
-                     ToolTip="{Binding Name}">
+                     ToolTip="{Binding Name}"
+                     >
                         <Grid>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="60" />
@@ -122,20 +137,23 @@
                              VerticalAlignment="Center"
                              Command="{Binding ElementName=topGrid, Path=DataContext.PinItem}"
                              CommandParameter="{Binding Name}"
-                             ShowBorder="False">
+                             ShowBorder="False"
+                             >
                                 <iconPacks:PackIconCodicons
                                  Width="20"
                                  Height="20"
                                  Margin="0,0,0,0"
                                  VerticalAlignment="Center"
-                                 Kind="pin" />
+                                 Kind="pin"
+                                 />
                             </orchestra:RibbonBackstageButton>
 
                             <TextBlock
                              Grid.Column="1"
                              Margin="5"
                              VerticalAlignment="Center"
-                             Text="{Binding Name, Converter={orchestra:PathToStringConverter}, ConverterParameter=100}" />
+                             Text="{Binding Name, Converter={orchestra:PathToStringConverter}, ConverterParameter=100}"
+                             />
 
                             <orchestra:RibbonBackstageButton
                              Grid.Column="2"
@@ -144,13 +162,15 @@
                              Command="{Binding ElementName=topGrid, Path=DataContext.OpenInExplorer}"
                              CommandParameter="{Binding Name}"
                              ShowBorder="False"
-                             ToolTip="Open in explorer">
+                             ToolTip="Open in explorer"
+                             >
                                 <iconPacks:PackIconCodicons
                                  Width="20"
                                  Height="20"
                                  Margin="0,0,0,0"
                                  VerticalAlignment="Center"
-                                 Kind="FolderOpened" />
+                                 Kind="FolderOpened"
+                                 />
                             </orchestra:RibbonBackstageButton>
                         </Grid>
                     </orchestra:RibbonBackstageButton>
