--- a/WolvenKit/Views/Wizards/FirstSetupWizard/SetInitialPreferencesView.xaml
+++ b/WolvenKit/Views/Wizards/FirstSetupWizard/SetInitialPreferencesView.xaml
@@ -3,7 +3,8 @@
  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
  xmlns:catel="http://schemas.catelproject.com"
- xmlns:hc="https://handyorg.github.io/handycontrol">
+ xmlns:hc="https://handyorg.github.io/handycontrol"
+ xmlns:services="clr-namespace:WolvenKit.Functionality.Services;assembly=WolvenKit.App">
 
     <Grid Grid.Row="3" VerticalAlignment="Center">
         <Grid
@@ -33,13 +34,13 @@
                              VerticalAlignment="Center"
                              FontSize="14"
                              Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}"
-                             Text="Auto-install mods upon creation?" />
+                             Text="Show guided tour after completing setup" />
                             <TextBlock
                              Margin="35,40,5,5"
                              VerticalAlignment="Center"
                              FontSize="14"
                              Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}"
-                             Text="Automatically receive WolvenKit updates?" />
+                             Text="Auto-install mods upon creation?" />
                         </StackPanel>
 
                         <StackPanel
@@ -80,7 +81,7 @@
                              HorizontalAlignment="Left"
                              VerticalAlignment="Center"
                              BorderThickness="0"
-                             IsChecked="{Binding AutoInstallMods}"
+                             IsChecked="{x:Static services:SettingsManager.ShowGuidedTour}"
                              IsEnabled="True"
                              Style="{StaticResource ToggleButtonFlip}">
                                 <hc:StatusSwitchElement.CheckedElement>
@@ -106,7 +107,7 @@
                                  HorizontalAlignment="Left"
                                  VerticalAlignment="Center"
                                  BorderThickness="0"
-                                 IsChecked="{Binding AutoUpdatesEnabled}"
+                                 IsChecked="{Binding AutoInstallMods}"
                                  IsEnabled="True"
                                  Style="{StaticResource ToggleButtonFlip}">
                                     <hc:StatusSwitchElement.CheckedElement>
@@ -126,15 +127,6 @@
                                          Text="Off" />
                                     </Border>
                                 </ToggleButton>
-                                <ComboBox
-                                 Width="320"
-                                 Margin="5"
-                                 HorizontalAlignment="Left"
-                                 hc:InfoElement.Title="Update Channel"
-                                 hc:InfoElement.TitlePlacement="Left"
-                                 hc:InfoElement.TitleWidth="100"
-                                 Style="{StaticResource ComboBoxExtend}"
-                                 Text="" />
                             </StackPanel>
                         </StackPanel>
                     </Grid>
